# 3d-game-reference-guide

./: .gitignore  README.md
code-examples/: README.md
code-examples/basic-movement-and-cameras-example/: Cargo.toml
code-examples/basic-movement-and-cameras-example/src/: main.rs
code-examples/basic-movement-and-cameras-example/src/entities/: camera.rs  mod.rs
code-examples/basic-movement-and-cameras-example/src/prefabs/: mod.rs
code-examples/basic-movement-and-cameras-example/src/prefabs/ui/: context.rs  fps.rs  mod.rs
code-examples/basic-movement-and-cameras-example/src/resources/: mod.rs  movement.rs  ui_context.rs
code-examples/basic-movement-and-cameras-example/src/states/: mod.rs
code-examples/basic-movement-and-cameras-example/src/systems/: character_switcher_system.rs  mod.rs
code-examples/core-setup-example/: Cargo.toml
code-examples/core-setup-example/src/: lib.rs  main.rs
docs/: README.md  book.toml
docs/book/: index.html  introduction.html  print.html  searchindex.js  searchindex.json
docs/book/cameras/: index.html
docs/book/examples/: core-setup.html  index.html  infrastructure.html
docs/book/infrastructure/: entity-component-system.html  game-engines.html  graphics-api.html  index.html  programming-languages.html
docs/book/overview/: index.html
docs/book/physics/: index.html
docs/book/resources/: 2d-games-resources.html  3d-games-resources.html  index.html
docs/book/user-interface/: index.html
docs/book/window-management/: examples.html  index.html
docs/src/: SUMMARY.md  introduction.md
docs/src/cameras/: index.md
(+22 files in other folders)
